# 2O9

./: .gitignore  BRANCH.md  DESIGN.md  LICENSE  Makefile  PKGBUILD  README.md  meson.build  meson_options.txt  test-nix-eval  test-nix-lexer
contrib/bash_completion.d/: 209
docs/: CONFIG.md  COOKBOOK.md  DEBAG_GDB_STUDY.md  DEBAG_RIZIN_STUDY.md  MANPAGE.md  MIGRATION.md  PHASE4_BOOTLOADER.md  PHASE4_FSTAB.md  PHASE4_PAM_NSS.md  PHASE4_PROFILE_HOOKS.md  PHASE4_SERVICES.md  PHASE4_USERS.md  README.md  TUTORIAL.md  USE_CASES.md
lib/2O9/alpm/: MODIFICATIONS.md  add.c  be_local.c  handle.h  package.c  package.h  pkghash.c  two9_init.c  two9_init.h
lib/2O9/nix/: MODIFICATIONS.md  README.md  nix_eval.c  nix_eval.h  nix_lexer.c  nix_parser.c  test_nix_eval.c  test_nix_eval_edge.c  test_nix_lexer.c
scripts/: test_aur_mock.sh
src/aur/: aur_build.c  aur_resolve.c  aur_rpc.c  aur_rpc.h  build.h  chroot.c  chroot.h  config.c  config.h  meson.build  pgp.c  pgp.h  resolver.h  test_aur_rpc.c
src/cli/: main.c  meson.build  subs_ui.c  subs_ui.h
src/debag/: debag.c  debag.h  dynamic_db.c  script_analysis.c  seccomp_filter.c  static_analysis.c  static_db.c
src/declarative/: activation.c  activation.h  bootloader.c  bootloader.h  fstab.c  fstab.h  gen.c  gen.h  gen_index.c  gen_index.h  meson.build  pam_nss.c  pam_nss.h  profile_hooks.c  profile_hooks.h  reconcile.c  reconcile.h  reconcile_execute.c  services.c  services.h  users.c  users.h
src/store/: binary-cache.c  binary-cache.h  db.c  db.h  meson.build  nar.c  nar.h  narinfo.c  narinfo.h  optimise.c  optimise.h  share.c  share.h  signing.c  signing.h  snapshot.c  snapshot.h  spike-nix-add.c  store.c  store.h  symlinks.c  symlinks.h  test_db.c  test_keygen.c  test_nar.c  test_narinfo.c  test_phase3_smoke.c  test_signing.c
src/trakker/: trakker.c  trakker.h
subprojects/pacman/: MODIFICATIONS.md  meson.build  meson_options.txt
test/: README.md  test_apply.sh  test_apply_empty_config.sh  test_apply_self_reference_cycle.sh  test_bundle.sh  test_cache.sh  test_cache_keygen_roundtrip.sh  test_debag.sh  test_diff_why_lock.sh  test_gc_closure.sh  test_install_sig_required_missing.sh  test_nix_eval_e2e.sh  test_nix_eval_edge_cases.sh  test_optimise_dedup.sh  test_pacman_flags.sh  test_rollback.sh  test_rollback_to_missing.sh  test_script_analysis.sh  test_share_subs.sh  test_trakker.sh
